website/tests/snapshots/types/functions.exp
=== block 1 ===
Error ----------------------------------------------------------------------------- -:7:8

Cannot call `concat` with `true` bound to `a` because boolean [1] is incompatible with string [2]. [incompatible-type]

   -:7:8
   7| concat(true, false);  // Error!
             ^^^^ [1]

References:
   -:2:20
   2| function concat(a: string, b: string): string {
                         ^^^^^^ [2]

Error ---------------------------------------------------------------------------- -:7:14

Cannot call `concat` with `false` bound to `b` because boolean [1] is incompatible with string [2]. [incompatible-type]

   -:7:14
   7| concat(true, false);  // Error!
                   ^^^^^ [1]

References:
   -:2:31
   2| function concat(a: string, b: string): string {
                                    ^^^^^^ [2]


Found 2 errors

=== block 2 ===
No errors!

=== block 3 ===
No errors!

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
No errors!

=== block 9 ===
No errors!

=== block 10 ===
No errors!

=== block 11 ===
Error ---------------------------------------------------------------------------- -:10:6

Cannot call `func` with `null` bound to `optionalValue` because null [1] is incompatible with string [2].
[incompatible-type]

   -:10:6
   10| func(null);      // Error!
            ^^^^ [1]

References:
   -:2:31
    2| function func(optionalValue?: string) {
                                     ^^^^^^ [2]


Found 1 error

=== block 12 ===
No errors!

=== block 13 ===
No errors!

=== block 14 ===
Error ---------------------------------------------------------------------------- -:7:21

Cannot assign `func.call(...)` to `str` because number [1] is incompatible with string [2]. [incompatible-type]

   -:7:21
   7| const str: string = func.call({x : 42}); // Error!
                          ^^^^^^^^^^^^^^^^^^^

References:
   -:7:36
   7| const str: string = func.call({x : 42}); // Error!
                                         ^^ [1]
   -:7:12
   7| const str: string = func.call({x : 42}); // Error!
                 ^^^^^^ [2]


Found 1 error

=== block 15 ===
No errors!

=== block 16 ===
Error ---------------------------------------------------------------------------- -:2:18

Cannot expect boolean as the return type of function because boolean [1] is incompatible with implicitly-returned
undefined. [incompatible-type]

   2| function func(): boolean { // Error
                       ^^^^^^^ [1]


Found 1 error

=== block 17 ===
No errors!

=== block 18 ===
No errors!

=== block 19 ===
No errors!

=== block 20 ===
Error --------------------------------------------------------------------------- -:10:38

Cannot assign function to `badFormat` because in the first parameter: number [1] is incompatible with string [2].
[incompatible-type]

   -:10:38
   10| const badFormat: Formatter = (value: number): string => String(value); // Error!
                                            ^^^^^^ [1]

References:
   -:3:11
    3|   (value: string): string,
                 ^^^^^^ [2]


Found 1 error

=== block 21 ===
Error ---------------------------------------------------------------------------- -:6:10

Cannot assign `"runs later"` to `callback.description` because property `description` is missing in statics of function
type [1]. [prop-missing]

   -:6:10
   6| callback.description = "runs later"; // Error!
               ^^^^^^^^^^^

References:
   -:4:17
   4| const callback: Callback = () => {};
                      ^^^^^^^^ [1]


Found 1 error

=== block 22 ===
No errors!

=== block 23 ===
No errors!

=== block 24 ===
No errors!
